fix: align popover tabs into 1 line

--- a/packages/uhk-web/src/styles/_variables.scss
+++ b/packages/uhk-web/src/styles/_variables.scss
@@ -31,7 +31,7 @@ $tooltip-padding-y:                 math.div($spacer, 4);
 $tooltip-padding-x:                 math.div($spacer, 2);
 
 $popover-font-size: $font-size-base;
-$popover-max-width: 700px;
+$popover-max-width: 725px;
 
 $btn-focus-width: 0;
 
